--- a/Portfolio.css
+++ b/Portfolio.css
@@ -17,6 +17,19 @@ body {
   font-weight: bold;
 }
 
+p {
+  font-size: 14px;
+}
+
+h2 {
+  font-weight: bold;
+  font-size: 23px;
+  margin-bottom: 20px;
+}
+
+a.font-black {
+  color: #000 !important;
+}
 /******************************
 
 ABOUT
@@ -65,4 +78,27 @@ in html, notice we write id first then class
 
 #about .icons a {
   color: #000;
+}
+
+/*************************************8
+
+PROJECT
+
+**************************************/
+
+#project {
+  margin: 60px auto;
+  width: 80%;
+}
+
+#project h2 {
+  text-align: center;
+}
+
+#project .card img {
+  width: 100%;
+}
+
+#project .card-title {
+  font-weight: bold;
 }
